; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_hdcp.c_drm_hdcp_srm_update.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_hdcp.c_drm_hdcp_srm_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64)* @drm_hdcp_srm_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @drm_hdcp_srm_update(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = icmp ult i64 %5, 4
  br i1 %6, label %7, label %8

7:                                                ; preds = %2
  br label %25

8:                                                ; preds = %2
  %9 = load i32*, i32** %3, align 8
  %10 = call i64 @is_srm_version_hdcp1(i32* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %8
  %13 = load i32*, i32** %3, align 8
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @drm_hdcp_parse_hdcp1_srm(i32* %13, i64 %14)
  br label %25

16:                                               ; preds = %8
  %17 = load i32*, i32** %3, align 8
  %18 = call i64 @is_srm_version_hdcp2(i32* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %16
  %21 = load i32*, i32** %3, align 8
  %22 = load i64, i64* %4, align 8
  %23 = call i32 @drm_hdcp_parse_hdcp2_srm(i32* %21, i64 %22)
  br label %24

24:                                               ; preds = %20, %16
  br label %25

25:                                               ; preds = %7, %24, %12
  ret void
}

declare dso_local i64 @is_srm_version_hdcp1(i32*) #1

declare dso_local i32 @drm_hdcp_parse_hdcp1_srm(i32*, i64) #1

declare dso_local i64 @is_srm_version_hdcp2(i32*) #1

declare dso_local i32 @drm_hdcp_parse_hdcp2_srm(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
